# NaturalLI

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  TAGS  autogen.sh  build.xml  config.h.in  configure  configure.ac  doxygen.conf  index.html  install_deps.sh  jenkins.sh  kb_from_text.sh  naturalli.css  naturalli.js  rc  run  run_naturalli  run_snli  script  stanford.rc  test_all.sh  tests.rc  todo
etc/: README.md  ai22perfcase  aristo2perfcase  depInsert2rel.sh  depInsert2rel.tab  edgeTypes.sh  fracas.xml  fracas2perfcase  mkGraph.sh  operators.tab  pp.sh  pp.sql  sfrm1000.pfb  stop-words_english.txt
etc/ai2/: mkCorpus.sh
etc/aristo/: README.md  aristo2perfcase  mkCorpus.sh  mkMonarch.sh  monarch2perfcase  mturk_task.html  pipeline_posturk.sh  pipeline_preturk.sh  query-negatives.py  turk_10_run-queries.py  turk_20_create-csv.py  turk_50_grok-turk-output.py  turk_51_view-turker.py
etc/ave/: ave2006.tab  (+9 more)
lib/: naturalli.py
logs/: print_last_suite.sh
m4/: ax_check_java_home.m4  ax_compile_stdcxx_0x.m4
pub/: Pseudocode.cc  figures.py  figures.tex  macros.tex  ref.bib
src/: Bloom.cc  Bloom.h  Channel.h  Config.h  CreateKnowledgeBase.cc  FactDB.cc  FactDB.h  GZip.cc  GZip.h  Graph.cc  Graph.h  HashTree.cc  InferenceServer.cc  JavaBridge.cc  JavaBridge.h  Makefile.am  Makefile.in  Map.cc  Map.h  Messages.proto  NaturalLI.cc  NaturalLIFeaturize.cc  NaturalLIIO.cc  NaturalLIIO.h  NaturalLISearch.cc  NaturalLIStandalone.cc  PopulateRamCloud.cc  PopulateRamCloud.h  Postgres.cc  Postgres.h  RamCloudBackend.cc  RamCloudBackend.h  Search.cc  Search.h  SynSearch.cc  SynSearch.h  SynSearchMultithreaded.cc  SynSearchSingleThreaded.cc  Trie.cc  Trie.h  (+7 more)
src/edu/stanford/nlp/natlog/: AdaptedMacCartneyMono.java  AdaptedMcCartneyMono.java  GaborMono.java  Mono.java  Monotonicity.java
src/edu/stanford/nlp/naturalli/: CBridge.java  ClassifyEntailment.java  CreateKnowledgeBase.java  DependencyTree.java  EntailmentClassifier.java  ExpandCoreference.java  HashCorpus.java  MinimalSynset.java  MultipleChoiceSolver.java  NaturalLogicAnnotator.java  NaturalLogicRelation.java  Operator.java  OperatorSpec.java  Polarity.java  Preprocess.java  ProcessPremise.java  ProcessQuery.java  QRewrite.java  Quantifier.java  QuantifierScope.java  QuantifierScopeAnnotator.java  QuantifierSpec.java  StaticResources.java  TrainEntailment.java  VerbIngTranslator.java  WSD.java  Word.java
src/edu/stanford/nlp/naturalli/entail/: BleuMeasurer.java  ClassifierTrainer.java  DebugDocument.java  DistantEntailmentClassifier.java  DistantEntailmentPair.java  EntailmentClassifier.java  EntailmentFeaturizer.java  EntailmentPair.java  FeaturesFromNaturalLI.java  MultipleChoiceSolver.java  NaturalLIAlignmentClassifier.java  NaturalLIClassifier.java  SimpleEntailmentClassifier.java  berkeley_aligner.conf
src/fnv/: Makefile  Makefile.am  Makefile.in  fnv.h  fnv032  fnv064
src/knheap/: Makefile.am  README.md  knheap.cc  knheap.h  knupdown3.cc  util.h
src/org/goobs/naturalli/: Benchmark.scala  Client.scala  DataSources.scala  Evaluate.scala  Implicits.scala  Learn.scala  LearnOffline.scala  LearnOnline.scala  NatLog.scala  Optimize.scala  Postgres.scala  Props.java  Quantifier.java  Utils.scala  simplify
src/org/goobs/naturalli/conf/: ave.conf  base.conf  conceptnet.conf  fracas.conf  mturk.conf
src/org/goobs/naturalli/demo/: Feedback.java  NaturalLI.java  SendMail.java  Shutdown.java  index.html  naturalli.css  naturalli.js
src/org/goobs/naturalli/demo/WEB-INF/: naturalli.xml
src/org/goobs/naturalli/scripts/: CreateGraph.scala  Entailment.scala  FindQuantifiers.scala  GrokFreebase.scala  IndexFactsToLucene.java  ParseConceptNetJSON.scala  PruneClosedClassNN.scala  Sandbox.scala  ShutdownServer.scala  Truth.scala  grokFacts.sh  simplify
src/org/goobs/truth/: .Props.java.swp  Benchmark.scala  Client.scala  DataSources.scala  Dict.scala  Evaluate.scala  Fact.scala  Implicits.scala  Learn.scala  LearnOffline.scala  LearnOnline.scala  NatLog.scala  Natlog.scala  Optimization.scala  Optimize.scala  Postgres.scala  Props.java  Quantifier.java  Test.scala  Utils.scala
src/org/goobs/truth/conf/: .base.conf.swp  ave.conf  base.conf  conceptnet.conf  fracas.conf  mturk.conf  script.conf
src/org/goobs/truth/demo/: DemoClient.java  index.html  truthiness.css
src/org/goobs/truth/scripts/: BootstrapGraph.scala  CreateEdges.scala  CreateGraph.scala  CreateIndexers.scala  Entailment.scala  ExportGraph.scala  FindQuantifiers.scala  GrokFreebase.scala  IndexFacts.scala  IndexFactsToLucene.java  IndexFactsToPostgres.scala  MostCommonPOSFinder.scala  ParseConceptNetJSON.scala  PruneClosedClassNN.scala  Sandbox.scala  ShutdownServer.scala  Truth.scala  auc  fastsed.cc  grokFacts.sh  lemmatize  simplify
test/: last_stderr  last_stdout  run_inet.py  run_ir_baseline.py  run_perfcase.sh  run_testcases.sh
test/src/: ITest.cc  Makefile.am  Makefile.in  TestBloom.cc  TestChannel.cc  TestFactDB.cc  TestGZip.cc  TestGraph.cc  TestMap.cc  TestMessages.pb.cc  TestModels.cc  TestPostgres.cc  TestSearch.cc  TestSynSearch.cc  TestTrie.cc  TestTypes.cc  TestUtils.cc  TestUtils.h
test/src/edu/stanford/nlp/natlog/: GaborMonoTest.java
test/src/edu/stanford/nlp/naturalli/: OperatorScopeITest.java  PolarityITest.java  PreprocessITest.java  ProcessPremiseITest.java  ProcessQueryITest.java  QRewriteTest.java  QuantifierScopeITest.java  WSDTest.java
test/src/edu/stanford/nlp/naturalli/entail/: EntailmentFeaturizerITest.java  EntailmentPairTest.java
test/src/gtest/: Makefile.in
test/src/org/goobs/naturalli/: DataSourcesTest.scala  EvaluateTest.scala  LearnOfflineTest.scala  LearnOnlineTest.scala  LearnRegressionTest.scala  NLPProcessingTest.scala  NatLogTest.scala  QuantifierTest.java  RegressionTest.scala  Test.scala
test/src/org/goobs/truth/: DataSourcesTest.scala  EvaluateTest.scala  LearnOfflineTest.scala  LearnOnlineTest.scala  LearnRegressionTest.scala  LearnTest.scala  NLPProcessingTest.scala  NatLogTest.scala  QuantifierTest.java  RegressionTest.scala  Test.scala  TestDataSources.scala
(+175 files in other folders)
